--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -18,6 +18,7 @@
 
 .home-page__reload-image {
     width: 70vw;
+    margin: 1.5rem 0;
     object-fit: contain;
 }
 
@@ -28,8 +29,7 @@
 
 @media screen and (min-width: 992px) {
     .home-page__reload-image {
-        width: 40vw;
-        margin-top: 2rem;
+        width: 35vw;
     }
 
     .home-page__button-container {
